<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.addstory.AddStoryFragment">

    <ImageView
        android:id="@+id/btn_close"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/desc_btn_close"
        android:src="@drawable/ic_close"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/add_story"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_close"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toEndOf="@+id/btn_close"
        app:layout_constraintTop_toTopOf="@+id/btn_close" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"

        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/desc_iv_story_photo"
            android:src="@drawable/ic_no_pictures" />

    </com.google.android.material.card.MaterialCardView>

    <EditText
        android:id="@+id/et_caption"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:background="@color/transparent"
        android:gravity="top|start"
        android:hint="@string/caption_story_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:weightSum="2"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btn_upload"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <ImageView
            android:id="@+id/btn_camera"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="28dp"
            android:src="@drawable/ic_camera"
            android:contentDescription="@string/desc_btn_add_image_camera" />

        <ImageView
            android:id="@+id/btn_gallery"
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:layout_weight="1"
            android:src="@drawable/ic_image"
            android:contentDescription="@string/desc_btn_add_image_gallery" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_upload"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:paddingVertical="6dp"
        android:text="@string/upload"
        android:textColor="@color/white_smoke"
        android:textAllCaps="false"
        android:backgroundTint="@color/navy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start" />

    <RelativeLayout
        android:id="@+id/loading"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black_20"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/navy"
            android:layout_centerInParent="true"/>

    </RelativeLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>