<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_smoke"
    app:layoutDescription="@xml/activity_on_boarding_scene"
    tools:context=".ui.onboarding.OnBoardingActivity">

    <ImageView
        android:id="@+id/iv_carita"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_logo_carita_nassa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/gl_ver_end"
        app:layout_constraintStart_toStartOf="@id/gl_ver_start"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/desc_iv_logo_carita" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/iv_menu_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintBottom_toBottomOf="@id/gl_hor_bot"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/gl_hor_top"
        app:lottie_autoPlay="true"
        app:lottie_fileName="writestories.json"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/tv_title_menu_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/title_menu_1"
        android:textAlignment="center"
        android:textColor="@color/navy"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/iv_menu_1"
        app:layout_constraintStart_toStartOf="@+id/iv_menu_1"
        app:layout_constraintTop_toBottomOf="@+id/iv_menu_1" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/iv_menu_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/gl_hor_bot"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/gl_hor_top"
        app:layout_constraintVertical_bias="0.3"
        app:lottie_autoPlay="true"
        app:lottie_fileName="sharestories.json"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/tv_title_menu_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/title_menu_2"
        android:textAlignment="center"
        android:textColor="@color/navy"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/iv_menu_2"
        app:layout_constraintStart_toStartOf="@+id/iv_menu_2"
        app:layout_constraintTop_toBottomOf="@+id/iv_menu_2" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/iv_menu_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/gl_hor_bot"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/gl_hor_top"
        app:layout_constraintVertical_bias="0.3"
        app:lottie_autoPlay="true"
        app:lottie_fileName="seestories.json"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/tv_title_menu_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/title_menu_3"
        android:textAlignment="center"
        android:textColor="@color/navy"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/iv_menu_3"
        app:layout_constraintStart_toStartOf="@+id/iv_menu_3"
        app:layout_constraintTop_toBottomOf="@+id/iv_menu_3" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/circle_menu_1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:altSrc="@drawable/ic_circle_full"
        app:layout_constraintEnd_toStartOf="@+id/circle_menu_2"
        app:layout_constraintStart_toStartOf="@id/gl_ver_start"
        app:layout_constraintTop_toBottomOf="parent"
        app:srcCompat="@drawable/ic_circle"
        app:tint="@color/navy" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/circle_menu_2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:altSrc="@drawable/ic_circle_full"
        app:layout_constraintBottom_toBottomOf="@+id/circle_menu_1"
        app:layout_constraintEnd_toStartOf="@+id/circle_menu_3"
        app:layout_constraintStart_toEndOf="@+id/circle_menu_1"
        app:layout_constraintTop_toTopOf="@+id/circle_menu_1"
        app:srcCompat="@drawable/ic_circle"
        app:tint="@color/navy" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/circle_menu_3"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:altSrc="@drawable/ic_circle_full"
        app:layout_constraintBottom_toBottomOf="@+id/circle_menu_2"
        app:layout_constraintEnd_toEndOf="@id/gl_ver_end"
        app:layout_constraintStart_toEndOf="@+id/circle_menu_2"
        app:layout_constraintTop_toTopOf="@+id/circle_menu_2"
        app:srcCompat="@drawable/ic_circle"
        app:tint="@color/navy" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/navy"
        android:text="@string/starts_now"
        app:layout_constraintBottom_toTopOf="@id/circle_menu_2"
        app:layout_constraintEnd_toEndOf="@id/tv_title_menu_3"
        app:layout_constraintStart_toStartOf="@id/tv_title_menu_3"
        app:layout_constraintTop_toBottomOf="@id/tv_title_menu_3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_ver_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_ver_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_hor_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_hor_bot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_hor_circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />


</androidx.constraintlayout.motion.widget.MotionLayout>